# ChangeLog for sys-apps/uam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/uam/ChangeLog,v 1.6 2010/12/19 19:29:20 mgorny Exp $

  19 Dec 2010; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Update the <bugs-to/> URL.

  23 Oct 2010; Michał Górny <mgorny@gentoo.org> metadata.xml:
  Update metadata.xml.

  13 Oct 2010; Markus Meier <maekke@gentoo.org> uam-0.0.7.ebuild:
  add ~x86, bug #339399

*uam-0.0.7 (07 Oct 2010)

  07 Oct 2010; Michał Górny <mgorny@gentoo.org> -uam-0.0.6.ebuild,
  +uam-0.0.7.ebuild:
  Trivial version bump. The new version fixes mountpoint removal (cleanup)
  when pumount is used.

  01 Oct 2010; Michał Górny <mgorny@gentoo.org> uam-0.0.6.ebuild:
  Reload udev rules only if ${ROOT}/dev/.udev exists. Thanks to ABCD for the
  suggestion.

*uam-0.0.6 (01 Oct 2010)

  01 Oct 2010; Michał Górny <mgorny@gentoo.org> +uam-0.0.6.ebuild,
  +metadata.xml:
  Import from the Sunrise overlay, per bug #278363.
