@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/uam
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/uam/ChangeLog,v 1.6 2010/12/19 19:29:20 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/uam/ChangeLog,v 1.7 2010/12/20 14:37:39 mgorny Exp $
+
+  20 Dec 2010; Michał Górny <mgorny@gentoo.org> uam-0.0.7.ebuild:
+  Change the SRC_URIs to use cloud.github.com directly. This avoids issues with
+  (pointless) SSL and old wget versions. Update the HOMEPAGE.
 
   19 Dec 2010; Michał Górny <mgorny@gentoo.org> metadata.xml:
   Update the <bugs-to/> URL.
